--- a/src/FXMLS/sample.fxml
+++ b/src/FXMLS/sample.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -9,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" prefHeight="362.0" prefWidth="357.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx" fx:controller="Controllers.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="500.0" prefWidth="457.0" vgap="10" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Controller">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -18,29 +20,40 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <Pane prefHeight="352.0" prefWidth="336.0" GridPane.rowIndex="1">
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="455.0" stylesheets="@../CSS/test.css" GridPane.rowIndex="1">
          <children>
-            <Button layoutX="138.0" layoutY="254.0" mnemonicParsing="false" text="Proceed" />
-            <Label layoutX="52.0" layoutY="36.0" prefHeight="35.0" prefWidth="233.0" text="ValNik Voting System" textAlignment="JUSTIFY">
+            <Button layoutX="198.0" layoutY="298.0" mnemonicParsing="false" stylesheets="@../CSS/test.css" text="Proceed" />
+            <Label layoutX="111.0" layoutY="34.0" prefHeight="35.0" prefWidth="233.0" text="ValNik Voting System" textAlignment="JUSTIFY" textFill="#20329a">
                <font>
-                  <Font size="24.0" />
+                  <Font name="Arial" size="24.0" />
                </font>
             </Label>
-            <Label layoutX="136.0" layoutY="101.0" text="Username">
+            <Label layoutX="196.0" layoutY="101.0" text="Username">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField layoutX="81.0" layoutY="134.0" promptText="Username">
+            <TextField layoutX="141.0" layoutY="146.0" promptText="Username">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </opaqueInsets>
+            </TextField>
+            <TextField layoutX="141.0" layoutY="221.0" promptText="Password">
                <font>
                   <Font size="14.0" />
                </font>
             </TextField>
-            <TextField layoutX="82.0" layoutY="190.0" promptText="Password">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="183.0" layoutY="439.0" prefHeight="15.0" prefWidth="88.0" text="Your Vote Matters!">
                <font>
-                  <Font size="14.0" />
+                  <Font name="Garamond" size="10.0" />
                </font>
-            </TextField>
+               <cursor>
+                  <Cursor fx:constant="NONE" />
+               </cursor>
+            </Label>
          </children>
       </Pane>
    </children>
