--- a/src/FXMLS/sample.fxml
+++ b/src/FXMLS/sample.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" prefHeight="500.0" prefWidth="457.0" vgap="10" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="500.0" prefWidth="457.0" style="-fx-background-color: #cceeff;" vgap="10" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Controller">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
