--- a/src/FXMLS/OpenScreen.fxml
+++ b/src/FXMLS/OpenScreen.fxml
@@ -23,7 +23,7 @@
    <children>
       <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="455.0" stylesheets="@../CSS/OpenScreen.css" GridPane.rowIndex="1">
          <children>
-            <Button fx:id="go" layoutX="198.0" layoutY="298.0" mnemonicParsing="false" onAction="#data_check" stylesheets="@../CSS/OpenScreen.css" text="Proceed" />
+            <Button fx:id="go" layoutX="198.0" layoutY="298.0" mnemonicParsing="false" onAction="#login" stylesheets="@../CSS/OpenScreen.css" text="Proceed" />
             <Label alignment="CENTER" layoutX="111.0" layoutY="37.0" prefHeight="35.0" prefWidth="233.0" text="ValNik Voting System" textAlignment="CENTER" textFill="#20329a" wrapText="true">
                <font>
                   <Font name="Arial" size="24.0" />
