--- a/src/FXMLS/VotingScreen.fxml
+++ b/src/FXMLS/VotingScreen.fxml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.VotingScreen">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.VotingScreen">
    <children>
-      <ListView fx:id="listview" layoutX="84.0" layoutY="48.0" prefHeight="304.0" prefWidth="433.0" />
+      <ListView fx:id="listview" layoutX="63.0" layoutY="100.0" prefHeight="227.0" prefWidth="474.0" />
+      <Label alignment="CENTER" layoutX="21.0" layoutY="22.0" prefHeight="35.0" prefWidth="233.0" text="ValNik Voting System" textAlignment="CENTER" textFill="#20329a" wrapText="true">
+         <font>
+            <Font name="Arial" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="85.0" layoutY="57.0" text="In Democracy We Trust">
+         <font>
+            <Font name="Garamond" size="11.0" />
+         </font>
+      </Label>
+      <Button layoutX="276.0" layoutY="354.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="49.0" stylesheets="@../CSS/OpenScreen.css" text="Vote" />
+      <Label layoutX="537.0" layoutY="379.0" text="2020-2021">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Label>
+      <Label fx:id="title" layoutX="276.0" layoutY="70.0" text="Title" />
    </children>
 </AnchorPane>
