--- a/src/FXMLS/ElectionCommittee.fxml
+++ b/src/FXMLS/ElectionCommittee.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ElectionCommitteeController">
    <children>
       <Label alignment="CENTER" layoutX="184.0" layoutY="32.0" prefHeight="35.0" prefWidth="233.0" text="ValNik Voting System" textAlignment="CENTER" textFill="#20329a" wrapText="true">
@@ -24,6 +23,7 @@
       <Label layoutX="225.0" layoutY="103.0" text="Election Committee Window" />
       <Label layoutX="273.0" layoutY="145.0" text="Username" />
       <Label layoutX="266.0" layoutY="223.0" text="MasterCode " />
-      <Button fx:id="start" layoutX="221.0" layoutY="325.0" mnemonicParsing="false" text="Initiate the voting proccess" onAction="#checkdata" />
+      <Button fx:id="start" layoutX="221.0" layoutY="325.0" mnemonicParsing="false" onAction="#checkdata" text="Initiate the voting proccess" />
+      <Button fx:id="terminate" layoutX="220.0" layoutY="325.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="159.0" text="Terminate the Voting " wrapText="true" visible="false" onAction="#completevoting" />
    </children>
 </AnchorPane>
