--- a/src/FXMLS/VotingScreen.fxml
+++ b/src/FXMLS/VotingScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,12 +20,17 @@
             <Font name="Garamond" size="11.0" />
          </font>
       </Label>
-      <Button layoutX="276.0" layoutY="354.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="49.0" stylesheets="@../CSS/OpenScreen.css" text="Vote" />
+      <Button fx:id="vote" layoutX="276.0" layoutY="354.0" mnemonicParsing="false" onAction="#submit" prefHeight="25.0" prefWidth="49.0" stylesheets="@../CSS/OpenScreen.css" text="Vote" />
       <Label layoutX="537.0" layoutY="379.0" text="2020-2021">
          <font>
             <Font size="10.0" />
          </font>
       </Label>
       <Label fx:id="title" layoutX="276.0" layoutY="70.0" text="Title" />
+      <CheckBox fx:id="candi" layoutX="63.0" layoutY="100.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="129.0" text="CheckBox" visible="false">
+         <font>
+            <Font name="Garamond" size="12.0" />
+         </font>
+      </CheckBox>
    </children>
 </AnchorPane>
